--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,10 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Bump patch version
-        run: npm version patch --no-git-tag-version
+        id: version
+        run: |
+          NEW_VERSION=$(npm version patch --no-git-tag-version)
+          echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
 
       - name: Build
         run: bun run build
@@ -46,7 +49,7 @@ jobs:
       - name: Commit version bump to main
         run: |
           git add package.json
-          git commit -m "chore: bump version [skip ci]"
+          git commit -m "chore: bump version to ${{ steps.version.outputs.version }} [skip ci]"
           git push
 
       - name: Deploy to GitHub Pages
