--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "test:watch": "rstest --watch"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "framer-motion": "^12.34.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-github-calendar": "^5.0.5"
+    "react-github-calendar": "^5.0.5",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
@@ -29,6 +31,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/react-google-recaptcha": "^2.1.9",
     "jsdom": "^27.3.0",
     "typescript": "^5.9.3"
   }
